--- a/index.html
+++ b/index.html
@@ -10,33 +10,34 @@
   <header>
     <div class="barra-navegacion">
       <div class="logo"></div>
-      <div class="buscador"></div>
-      <button class="boton-buscar">Search</button>
+      <div class="buscador"></div> <button class="boton-buscar"></button>
     </div>
   </header>
 
   <main>
-    <section class="search-section" style="text-align: center;">
-      <div class="search-bar">
-        <div class="search-bar2"></div>
+    <section class="Buscar" style="text-align: center;">
+      
+      <div class="fondo-buscar"> 
+        <input type="search" placeholder="Buscar...">
+        <button type="submit">
+          </button>
       </div>
-      <nav class="menu-links">
-      </nav>
+      <nav class="menu-links" style="text-align: center;">
+       </nav>
     </section>
 
     <section class="destacado">
       <figure class="imagen-destacada"></figure>
       <div class="texto-destacado">
-        <h2 class="titulo">Title</h2>
-        <p class="linea">Line 1</p>
-        <p class="linea">Line 2</p>
-        <p class="linea-corta">Short Line</p>
+        <h2 class="titulo"></h2>
+        <p class="linea"></p>
+        <p class="linea"></p>
+        <p class="linea-corta"></p>
       </div>
     </section>
   </main>
 
   <footer>
-    <!-- Footer content can go here -->
   </footer>
 </body>
 </html>
