mastantuono es mejor que messi(casi terminado)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
       <div class="fondo-buscar"> 
         <input type="search" placeholder="Buscar...">
-        <button type="submit">
+        <button >
           </button>
       </div>
       <nav class="menu-links" style="text-align: center;">
@@ -27,13 +27,30 @@
     </section>
 
     <section class="destacado">
-      <figure class="imagen-destacada"></figure>
+      <figure class="foto-destacada"></figure>
       <div class="texto-destacado">
         <h2 class="titulo"></h2>
         <p class="linea"></p>
         <p class="linea"></p>
         <p class="linea-corta"></p>
       </div>
+    </section>
+    <section class="cajas">
+      <div class="caja naranja">
+          <div class="contenido-caja">
+              <div class="linea-caja"></div>
+              <div class="linea-caja-media"></div>
+              <div class="linea-caja"></div>
+          </div>
+      </div>
+      <div class="caja celeste">
+          <div class="contenido-caja"></div>
+      </div>
+      <div class="caja amarillo">
+          <div class="contenido-caja"></div>
+      </div>
+    <section>
+     
     </section>
   </main>
 
